deploy.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: server-a
  labels:
    server: "http"
    expose: "true"
spec:
  containers:
    - name: front-end
      image: beppev/server-a:latest
      ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Pod
metadata:
  name: server-b
  labels:
    server: "http"
spec:
  containers:
    - name: front-end
      image: beppev/server-b:latest
      ports:
        - containerPort: 6000
---
kind: Service
apiVersion: v1
metadata:
  name: server-check
spec:
  selector:
    server: "http"
  ports:
    - name: http
      protocol: TCP
      port: 6000
---
kind: Service
apiVersion: v1
metadata:
  name: expose-server
spec:
  type: LoadBalancer
  selector:
    expose: "true"
  ports:
    - name: http
      protocol: TCP
      targetPort: 5000
      port: 5000
