infra.yaml
apiVersion: v1
kind: Service
metadata:
  name: expose-service
spec:
  selector:
    expose: "true"
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30036
  type: NodePort
