gateway.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    sidecar.istio.io/status: '{"version":"b5faac9e6b02231b7db3b29487392a395f1c85c746bf62dc8cb660444af6e0d9","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
  creationTimestamp: null
  labels:
    expose: "true"
    security.istio.io/tlsMode: istio
    server: http
    name: "a"
  name: server-a
spec:
  containers:
  - image: beppev/server-a:latest
    name: front-end
    ports:
    - containerPort: 5000
    resources: {}
  - args:
    - proxy
    - sidecar
    - --domain
    - $(POD_NAMESPACE).svc.cluster.local
    - --configPath
    - /etc/istio/proxy
    - --binaryPath
    - /usr/local/bin/envoy
    - --serviceCluster
    - server-a.default
    - --drainDuration
    - 45s
    - --parentShutdownDuration
    - 1m0s
    - --discoveryAddress
    - istio-pilot.istio-system:15011
    - --zipkinAddress
    - zipkin.istio-system:9411
    - --proxyLogLevel=warning
    - --proxyComponentLogLevel=misc:error
    - --connectTimeout
    - 10s
    - --proxyAdminPort
    - "15000"
    - --concurrency
    - "2"
    - --controlPlaneAuthPolicy
    - MUTUAL_TLS
    - --dnsRefreshRate
    - 300s
    - --statusPort
    - "15020"
    - --applicationPorts
    - "5000"
    - --trust-domain=cluster.local
    image: docker.io/istio/proxyv2:1.4.5
    imagePullPolicy: IfNotPresent
    name: istio-proxy
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
    readinessProbe:
      failureThreshold: 30
      httpGet:
        path: /healthz/ready
        port: 15020
      initialDelaySeconds: 1
      periodSeconds: 2
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 128Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      privileged: false
      readOnlyRootFilesystem: true
      runAsGroup: 1337
      runAsNonRoot: true
      runAsUser: 1337
    volumeMounts:
    - mountPath: /etc/istio/proxy
      name: istio-envoy
    - mountPath: /etc/certs/
      name: istio-certs
      readOnly: true
  volumes:
  - emptyDir:
      medium: Memory
    name: istio-envoy
  - name: istio-certs
    secret:
      optional: true
      secretName: istio.default
status: {}
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    sidecar.istio.io/status: '{"version":"b5faac9e6b02231b7db3b29487392a395f1c85c746bf62dc8cb660444af6e0d9","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
  creationTimestamp: null
  labels:
    security.istio.io/tlsMode: istio
    server: http
    name: "b"
  name: server-b
spec:
  containers:
  - image: beppev/server-b:latest
    name: front-end
    ports:
    - containerPort: 6000
    resources: {}
  - args:
    - proxy
    - sidecar
    - --domain
    - $(POD_NAMESPACE).svc.cluster.local
    - --configPath
    - /etc/istio/proxy
    - --binaryPath
    - /usr/local/bin/envoy
    - --serviceCluster
    - server-b.default
    - --drainDuration
    - 45s
    - --parentShutdownDuration
    - 1m0s
    - --discoveryAddress
    - istio-pilot.istio-system:15011
    - --zipkinAddress
    - zipkin.istio-system:9411
    - --proxyLogLevel=warning
    - --proxyComponentLogLevel=misc:error
    - --connectTimeout
    - 10s
    - --proxyAdminPort
    - "15000"
    - --concurrency
    - "2"
    - --controlPlaneAuthPolicy
    - MUTUAL_TLS
    - --dnsRefreshRate
    - 300s
    - --statusPort
    - "15020"
    - --applicationPorts
    - "6000"
    - --trust-domain=cluster.local
    image: docker.io/istio/proxyv2:1.4.5
    imagePullPolicy: IfNotPresent
    name: istio-proxy
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
    readinessProbe:
      failureThreshold: 30
      httpGet:
        path: /healthz/ready
        port: 15020
      initialDelaySeconds: 1
      periodSeconds: 2
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 128Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      privileged: false
      readOnlyRootFilesystem: true
      runAsGroup: 1337
      runAsNonRoot: true
      runAsUser: 1337
    volumeMounts:
    - mountPath: /etc/istio/proxy
      name: istio-envoy
    - mountPath: /etc/certs/
      name: istio-certs
      readOnly: true
  volumes:
  - emptyDir:
      medium: Memory
    name: istio-envoy
  - name: istio-certs
    secret:
      optional: true
      secretName: istio.default
status: {}
---
kind: Service
apiVersion: v1
metadata:
  name: server-a-service
spec:
  selector:
    name: "a"
  ports:
    - name: http
      protocol: TCP
      port: 5000
    - name: sb
      protocol: TCP
      port: 6000
---
kind: Service
apiVersion: v1
metadata:
  name: server-b-service
spec:
  selector:
    name: "b"
  ports:
    - name: http
      protocol: TCP
      port: 6000

---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: link-servers
spec:
  hosts:
  -  server-a-service
  http:
    - match:
        - headers:
            end-user:
              exact: jason
      route:
        - destination:
            host: server-b-service
    - route:
        - destination:
            host: server-b-service




#kind: Service
#apiVersion: v1
#metadata:
#  name: server-a-service
#spec:
#  selector:
#    server: "http"
#  ports:
#    - name: http
#      protocol: TCP
#      port: 6000
---
kind: Service
apiVersion: v1
metadata:
  name: expose-server
spec:
  type: NodePort
  selector:
    expose: "true"
  ports:
    - name: http
      protocol: TCP
      targetPort: 5000
      port: 5000
      nodePort: 30036
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: virtual-service
#spec:
#  host:
#    - expose-server
#  http:
#    - match:
#        - headers:
#            end-user:
#              exact: jason
#        - route:
#            - destination:
#              host: expose-server
#        - route:
#              - destination:
#                host: expose-server
#
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ext-host-gwy
spec:
  selector:
    expose: "true"
  servers:
  - port:
      number: 5000
      name: http
      protocol: HTTP
    hosts:
    - expose-server.cluster.local

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-svc
spec:
  hosts:
  - '*'
  gateways:
    - ext-host-gwy
  http:
    - name: "help"
      route:
        - destination:
            host: expose-server.cluster.local
